[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_weather_server"
version = "0.2.1"
authors = [
  { name = "danielshih", email = "dog830228@gmail.com" },
]
description = "An MCP server for weather information"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  'httpx',
  "mcp>=1.0.0",
  "argparse>=1.4.0",
  "httpx>=0.28.1",
  "mcp[cli]>=1.2.1",
  "python-dotenv>=1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_weather_server"]

[project.scripts]
mcp_weather_server = "mcp_weather_server:main"

[project.urls]
Source = "https://github.com/isdaniel/mcp_weather_server"


