[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_servers"
version = "0.2.1"
description = "MCP servers Collection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastmcp>=2.0.0",
  "mcp>=1.10.0",
  "argparse>=1.4.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1",
  "python-dateutil>=2.8.2",
  "openai>=1.97.1",
  "requests>=2.32.4",
  "pytz>=2025.2",
]

# [tool.hatch.build.targets.wheel]
# packages = ["src/mcp_weather_server"]

# [project.scripts]
# mcp_servers = "mcp_servers:main"

# [project.urls]
# Source = "https://github.com/isdaniel/mcp_weather_server"


